test/data/semantic/bad/match_arm_type_mismatch.coy
enum E {
    A(),
    B()
}

fn f(x: E) -> i64 {
    match x {
        E::A() => 0,
        E::B() => 1.0
    }
}

fn main() -> () {
    ()
}
